--- a/group_vars/all/main.yml
+++ b/group_vars/all/main.yml
@@ -6,3 +6,7 @@ nodejs_version: "18.x"
 # nodejs_install_npm_user: 
 nodejs_npm_global_packages:
   - name: pnpm
+
+service_name: matomo-stack
+service_src_folder: "/opt/{{ service_name }}"
+docker_compose_file: "{{ service_src_folder }}/docker-compose.yml"
