--- a/group_vars/all/users.yml
+++ b/group_vars/all/users.yml
@@ -7,5 +7,5 @@ users:
       - ansibleadmin
       - docker
     keys:
-      - https://github.com/AltanS.keys
+      - "{{ lookup('dotenv', 'GITHUB_USER_KEYS') }}" #replace this with your github profile, if keys have been added
       # - "{{ lookup('file', gh_public_key_path ) }}"
