clear matomo cache after deploy

--- a/tasks/blue_green_single_deploy.yml
+++ b/tasks/blue_green_single_deploy.yml
@@ -26,3 +26,7 @@
 - name: Start matomo_{{ instance_index }}
   command: docker compose -f {{ docker_compose_file }} up --no-deps --no-build -d matomo_{{ instance_index }}
   when: service_status == "running"
+
+- name: Clear Matomo cache in container
+  command: docker compose -f {{ docker_compose_file }} exec matomo_{{ instance_index }} ./console cache:clear
+  when: service_status == "running"
