add vault secrets

--- a/ansible.cfg
+++ b/ansible.cfg
@@ -3,6 +3,7 @@ force_color = True
 inventory = hosts
 roles_path = vendor/roles
 lookup_plugins = ./lookup_plugins
+vault_password_file = ./vault_pass.txt
 
 [ssh_connection]
 ssh_args = -o ForwardAgent=yes -o ControlMaster=auto -o ControlPersist=60s
