fix: folder ownership for matomo container

--- a/tasks/blue_green_single_deploy.yml
+++ b/tasks/blue_green_single_deploy.yml
@@ -30,3 +30,9 @@
 - name: Clear Matomo cache in container
   command: docker compose -f {{ docker_compose_file }} exec matomo_{{ instance_index }} ./console cache:clear
   when: service_status == "running"
+
+- name: Change ownership of Matomo files in container
+  command: >
+    docker compose -f {{ docker_compose_file }} exec matomo_{{ instance_index }}
+    chown -R www-data:www-data /var/www/html
+  when: service_status == "running"
