--- a/group_vars/production/secrets.yml
+++ b/group_vars/production/secrets.yml
@@ -1,2 +1,3 @@
-MARIADB_ROOT_PASSWORD: SUPER_STRONG_PW
-MARIADB_MATOMO_PASSWORD: SUPER_STRONG_PW
+secrets:
+  MARIADB_ROOT_PASSWORD: "SUPER_STRONG_PW"
+  MARIADB_MATOMO_PASSWORD: "SUPER_STRONG_PW"
