--- a/requirements.yml
+++ b/requirements.yml
@@ -14,5 +14,5 @@ roles:
     version: 2.2.0
   - name: geerlingguy.docker
     version: 6.1.0
-  - name: geerlingguy.nodejs
-    version: 6.1.1
+  - name: darkwizard242.lazydocker
+    version: 2.5.1
